@@ -1,3 +1,3 @@
-1.0 0.0 0.0
-0.0 1.0 2.0
-0.0 0.0 1.0
+5.13232500000000    0.00000000000000    5.13232500000000
+5.13232500000000    5.13232500000000    0.00000000000000
+0.00000000000000    5.13232500000000    5.13232500000000
